# INF_213

./: .gitignore
pratica10/: CMakeLists.txt  driver.cpp  etap2.txt
pratica2/: adivinharComplexidade2.cpp  analise1.cpp
pratica3/: buscaBinaria3.cpp  buscaBinariaFuncoes1.cpp  entradaOrdenaStruct1.txt  ordenaStruct1.cpp  ordenaStruct2.cpp  s.txt
pratica4/: entrada10.txt  insertionSortTemplate1.cpp  mergeSortTemplate1.cpp  mergesort.cpp  mergesort2.cpp  mergesort3.cpp
pratica5/: cppsort.cpp  entrada1000.txt  entrada100k.txt  entrada10k.txt  functorExemplos.cpp  geraEntradaAleatoria.cpp  insertionSortTemplate2.cpp  insertionsort.cpp  mergesort3.cpp  quicksort.cpp  quicksort2.cpp  quicksort3.cpp  random.cpp
pratica6/: MyVec.h  TestaMyVec.cpp
pratica7/: CMakeLists.txt  MyList.h
pratica8/: CMakeLists.txt  MyList2.h
pratica9/: CMakeLists.txt  MyList2NewIterator.h  Testes.cpp
trabalho1/: BoughtStock.cpp  BoughtStock.h  CMakeLists.txt  HistoryEarning.cpp  HistoryEarning.h  HistoryPrice.cpp  HistoryPrice.h  MinMax.cpp  MinMax.h  SortMethods.cpp  SortMethods.h  StockPriceQtd.cpp  StockPriceQtd.h  Wallet.cpp  Wallet.h  aporte.txt  entrada1.txt  main.cpp  main1.cpp
trabalho1/exemplos/: entrada1.txt  entrada1_compacta.txt  entrada2.txt  entrada3.txt  saida_entrada1.txt  saida_entrada1_compacta.txt  saida_entrada2.txt  saida_entrada3.txt
